# Fidesys_test

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back
.github/workflows/: cmake.yml
LagrangeElements/: CMakeLists.txt  CustomLagrangeElement.h  LagrangeElements.cpp  LagrangeElements.h
ModelGenerator/: CMakeLists.txt  ModelDescriptor.cpp  ModelDescriptor.h  ModelGenerator.cpp  ModelGenerator.h
Solver/: Solver.cpp  Solver.h
StreamOutput/: CMakeLists.txt  StreamOutput.cpp  StreamOutput.h
tests/: CMakeLists.txt  test_methods.cpp  test_methods.h
tests/LagrangeElement_test/: CMakeLists.txt  LagrangeElement_test1.cpp  LagrangeElement_test2.cpp  LagrangeElement_test3.cpp
tests/Solver_test/: CMakeLists.txt  SolveTestProblem.cpp  Solver_test1.cpp  Solver_test2.cpp  Solver_test3.cpp  Solver_testMeshHomo2.cpp  Solver_testMeshHomoFine.cpp
tests/Solver_test/data/: task_mesh_homo2.k
tests/modelGenerator_test/: CMakeLists.txt  ModelDescriptor_test.cpp
tests/modelGenerator_test/KFileParser_test/: CMakeLists.txt  KFileParser_test1.cpp  KFileParser_test2.cpp  KFileParser_test3.cpp  KFileParser_test4.cpp
tests/modelGenerator_test/KFileParser_test/data/: element_section.k
tests/modelGenerator_test/ModelDescriptor_test/: CMakeLists.txt  ModelDescriptor_test.cpp  ModelDescriptor_test1.cpp  ModelDescriptor_test2.cpp
tests/modelGenerator_test/data/: node_section.k
